[package]
name = "spotify_listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.21", features = ["full"] }
rspotify = { version = "^0.11", features = ["env-file", "cli"] }


